tests/NormalTests/paczka1/small_fuzzy/36196451.err
Error in line 8: YGH9BvO A756 95,2
Error in line 15: e7s2rl9ulN A280 48,1
